[gd_scene load_steps=2 format=3 uid="uid://bctrg21138lx"]

[ext_resource type="Script" path="res://ui/report_bug.gd" id="1_17eca"]

[node name="report_bug" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_17eca")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.270588, 0.270588, 0.270588, 1)

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -454.0
offset_top = -340.0
offset_right = 454.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Label" type="Label" parent="ColorRect/ColorRect"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "REPORT AN ISSUE"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ColorRect"]
offset_left = 10.0
offset_top = 50.0
offset_right = 50.0
offset_bottom = 90.0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/ColorRect/VBoxContainer"]
offset_right = 840.0
offset_bottom = 250.0

[node name="Label" type="Label" parent="ColorRect/ColorRect/VBoxContainer/HBoxContainer"]
offset_top = 112.0
offset_right = 136.0
offset_bottom = 138.0
text = "Issue description:"

[node name="issue_TextEdit" type="TextEdit" parent="ColorRect/ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2i(700, 250)
offset_left = 140.0
offset_right = 840.0
offset_bottom = 250.0

[node name="VSplitContainer" type="VSplitContainer" parent="ColorRect/ColorRect/VBoxContainer"]
offset_top = 254.0
offset_right = 840.0
offset_bottom = 254.0
split_offset = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/ColorRect/VBoxContainer"]
offset_top = 258.0
offset_right = 840.0
offset_bottom = 508.0

[node name="Label" type="Label" parent="ColorRect/ColorRect/VBoxContainer/HBoxContainer2"]
offset_top = 112.0
offset_right = 136.0
offset_bottom = 138.0
text = "How to replicate: "

[node name="reproduce_TextEdit" type="TextEdit" parent="ColorRect/ColorRect/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2i(700, 250)
offset_left = 140.0
offset_right = 840.0
offset_bottom = 250.0

[node name="VSplitContainer2" type="VSplitContainer" parent="ColorRect/ColorRect/VBoxContainer"]
offset_top = 512.0
offset_right = 840.0
offset_bottom = 512.0
split_offset = 10

[node name="CheckButton" type="CheckButton" parent="ColorRect/ColorRect/VBoxContainer"]
offset_top = 516.0
offset_right = 840.0
offset_bottom = 547.0
text = "Take screenshot? (Work in Progress)"

[node name="CheckButton2" type="CheckButton" parent="ColorRect/ColorRect/VBoxContainer"]
offset_top = 551.0
offset_right = 840.0
offset_bottom = 582.0
text = "Send annonymous data about device (CPU, operating system ...) (Work in Progress)"

[node name="Submit" type="Button" parent="ColorRect/ColorRect"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "SUBMIT"

[node name="Close" type="Button" parent="ColorRect/ColorRect"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -43.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "CLOSE"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="ColorRect/ColorRect/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="ColorRect/ColorRect/Close" to="." method="_on_close_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
